# Garendar

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  garendar.py  migrations.json  pyproject.toml  scheduler.py
.github/workflows/: lint_n_test.yaml
migrations/: 001_event.py
models/: __init__.py  event.py
src/: config.py  constants.py  event_parser.py  parse_events.py  schedule.py  scheduler.py  simple_scheduler.py  utils.py
tests/: conftest.py  test_parser.py  test_scheduler.py  test_utils.py
