[tool.poetry]
name = "garendar"
version = "0.1.0"
description = ""
authors = ["Shipra <code.shipra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.0"
peewee-migrate = "^1.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-pie = "^0.16.0"
flake8-polyfill = "^1.0.2"
flake8-simplify = "^0.20.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
atomic = true
ensure_newline_before_comments = true
line_length = 119
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
