[tool.poetry]
name = "garendar"
version = "0.1.0"
description = ""
authors = ["Shipra <code.shipra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.0"
peewee-migrate = "^1.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
format = "grouped"
line-length = 119
select = ["A", "B", "C", "C4", "D", "E", "F", "I", "PIE", "S", "W"]
ignore = [ "B008", "D1", "N814", "D211", "D213", "PIE794", "S101", "S104", "SIM300"]
exclude = [ ".venv", "venv", "migrations", ".git", "__pycache__", "venv", ".venv", "env", ".env", "migrations"]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.mccabe]
max-complexity = 8

